Simplify dynamic ore planning